--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
-.food {
+.img {
+    max-width: 100%;
     height: auto;
     width: 750px;
+    border-radius: 50%;
+}
+
+.img.noodles {
+    opacity: 0.7;
 }
 
 .title {
