Add hover text to images

--- a/style.css
+++ b/style.css
@@ -2,21 +2,46 @@
     max-width: 100%;
     height: auto;
     width: 750px;
-    border-radius: 50%;
-}
-
-.img.noodles {
-    opacity: 0.7;
+    border-radius: 8px;
+    display: block;
 }
 
 .title {
-    background-color: yellow;
+    background-color: rgba(255, 255, 0, 0.301);
     font-family: 'Courier New', Courier, monospace;
     font-size: 36px;
     font-weight: 800;
+    text-align: center;
 }
 
-.recipe {
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: 900;
+.container {
+    position: relative;
+    width: 50%;
+}
+  
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: rgba(255, 255, 0, 0.703);
+    max-width: 750px;
+}
+  
+.container:hover .overlay {
+    opacity: 0.9;
+}
+  
+.text {
+    font-size: 40px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
 }
